<resources>
    <string name="app_name">Fast Rent</string>
    <string name="signin_account_question">Create new account ?</string>
    <string name="signin_password_question">Forgot password ?</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="repeatpassword">repeat password</string>
    <string name="fullname">full name</string>
    <string name="signin">sign in</string>
    <string name="signup">sign up</string>
    <string name="city">city</string>
    <string name="phonenumber">phone number</string>
    <string name="signup_terms_message">By signing up you agree to our terms and conditions</string>
    <string name="signup_terms_and_conditions">Terms and conditions</string>
    <string name="signup_already_have_account">Already have an account ?</string>
    <string name="signin_welcome_again">Welcome Again</string>
    <string name="signup_create_new_acccount">Create Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>