<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">



        <TextView
            android:id="@+id/sign_up_tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_create_new_acccount"
            android:textSize="30sp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:textColor="@color/custom_blue"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_til_fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/fullname"
            app:boxBackgroundColor="@color/cardview_light_background"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_tiet_fullname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_til_city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/city"
            app:boxBackgroundColor="@color/cardview_light_background"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_tiet_city"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_til_phonenumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/phonenumber"
            app:boxBackgroundColor="@color/cardview_light_background"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_tiet_phonenumber"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_til_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/email"
            app:boxBackgroundColor="@color/cardview_light_background"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_tiet_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/password"
            app:boxBackgroundColor="@color/cardview_light_background"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_tiet_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_til_repeatpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="30dp"
            android:hint="@string/repeatpassword"
            app:boxBackgroundColor="@color/cardview_light_background"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_tiet_repeatpassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/sign_up_tv_messageofterms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_terms_message"
            android:textColor="@color/custom_blue"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="30dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/sign_up_acb_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/btn_signin"
            android:text="@string/signup"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/sign_up_tv_termandconditions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_terms_and_conditions"
            android:textColor="@color/custom_red"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/sign_up_tv_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_already_have_account"
            android:textColor="@color/custom_red"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="100dp"/>


    </LinearLayout>

</ScrollView>